Add initial GtkApplication subclass
A Gtk.Application subclass to handle the application's initialization
and integration with the GNOME stack. It implements the do_startup and
do_activate methods and is responsible for the application's menus,
icons, title and lifetime.

--- a/data/meson.build
+++ b/data/meson.build
@@ -3,11 +3,20 @@ gnome = import('gnome')
 desktopdir = join_paths(datadir, 'applications')
 icondir = join_paths(datadir, 'icons', 'hicolor', 'scalable', 'apps')
 
+conf = configuration_data()
+conf.set('version', meson.project_version())
+conf.set('url', 'https://github.com/libratbag/piper')
+
+about_dialog = configure_file(input: 'aboutDialog.ui.in',
+			      output: 'aboutDialog.ui',
+			      configuration: conf)
+
 gnome.compile_resources('piper', 'piper.gresource.xml',
 			source_dir: '.',
+			dependencies: [about_dialog],
 			gresource_bundle: true,
 			install: true,
 			install_dir: pkgdatadir)
 
-install_data('piper.desktop', install_dir: desktopdir)
-install_data('piper.svg', install_dir: icondir)
+install_data('org.freedesktop.Piper.desktop', install_dir: desktopdir)
+install_data('org.freedesktop.Piper.svg', install_dir: icondir)
