--- a/piper.in
+++ b/piper.in
@@ -6,7 +6,8 @@ import os
 import locale
 import gettext
 
-from piper import piper
+import piper
+from piper.application import Application
 
 import gi
 gi.require_version('Gio', '2.0')
@@ -46,6 +47,5 @@ if __name__ == "__main__":
     Gio.Resource._register(resource)
 
     signal.signal(signal.SIGINT, signal.SIG_DFL)
-    win = piper.Piper()
-    Gtk.main()
-
+    exit_status = Application().run(sys.argv)
+    sys.exit(exit_status)
