--- a/piper.in
+++ b/piper.in
@@ -7,22 +7,14 @@ import os
 import signal
 import sys
 
-import piper
-from piper.application import Application
-
 gi.require_version('Gio', '2.0')
 gi.require_version('Gtk', '3.0')
 from gi.repository import Gio, Gtk
 
-localedir = '@localedir@'
-srcdir = os.path.abspath(os.path.join(os.path.dirname(piper.__file__), '..'))
-if os.path.exists(os.path.join(srcdir, 'meson.build')):
-    print('Running from source tree, using local files')
-    pkgdatadir = os.path.join(srcdir, 'data')
-    if not os.environ.get('GSETTINGS_SCHEMA_DIR'):
-        os.environ['GSETTINGS_SCHEMA_DIR'] = pkgdatadir
-else:
-    pkgdatadir = '@pkgdatadir@'
+@devel@
+
+# Must come after development code injection.
+from piper.application import Application
 
 
 def install_excepthook():
@@ -40,12 +32,12 @@ def install_excepthook():
 if __name__ == "__main__":
     install_excepthook()
 
-    locale.bindtextdomain('piper', localedir)
+    locale.bindtextdomain('piper', '@localedir@')
     locale.textdomain('piper')
-    gettext.bindtextdomain('piper', localedir)
+    gettext.bindtextdomain('piper', '@localedir@')
     gettext.textdomain('piper')
 
-    resource = Gio.resource_load(os.path.join(pkgdatadir, 'piper.gresource'))
+    resource = Gio.resource_load(os.path.join('@pkgdatadir@', 'piper.gresource'))
     Gio.Resource._register(resource)
 
     signal.signal(signal.SIGINT, signal.SIG_DFL)
