--- a/meson.build
+++ b/meson.build
@@ -11,6 +11,7 @@ prefix = get_option('prefix')
 datadir = join_paths(prefix, get_option('datadir'))
 localedir = join_paths(prefix, get_option('localedir'))
 pkgdatadir = join_paths(datadir, meson.project_name())
+bindir = join_paths(prefix, get_option('bindir'))
 
 subdir('data')
 
@@ -31,7 +32,7 @@ config_piper.set('localedir', localedir)
 configure_file(input: 'piper.in',
 	       output: 'piper',
 	       configuration: config_piper,
-	       install_dir: 'bin')
+	       install_dir: bindir )
 
 config_piper_devel = configuration_data()
 config_piper_devel.set('pkgdatadir', join_paths(meson.build_root(), 'data'))
