Add support for translations
Based on earlier work by @whot:

https://github.com/whot/piper/commit/44d8265d4a973ec45962d75f79e98fab1925b6ff

Fixes #12.

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ pkgdatadir = join_paths(datadir, meson.project_name())
 bindir = join_paths(prefix, get_option('bindir'))
 
 subdir('data')
+subdir('po')
 
 # Find the directory to install our Python code
 python = import('python3')
