--- a/meson.build
+++ b/meson.build
@@ -36,16 +36,20 @@ config_piper.set('gtk_major_version', gtk_major_version)
 config_piper.set('gtk_minor_version', gtk_minor_version)
 config_piper.set('devel', '')
 
-config_piper_devel = config_piper
-config_piper_devel.set('devel', '
-sys.path.insert(1, \'@0@\')
-print(\'Running from source tree, using local files\')
-'.format(meson.source_root()))
-
 configure_file(input: 'piper.in',
 	       output: 'piper',
 	       configuration: config_piper,
 	       install_dir: bindir)
+
+config_piper_devel = configuration_data()
+config_piper_devel.set('pkgdatadir', join_paths(meson.build_root(), 'data'))
+config_piper_devel.set('localedir', join_paths(meson.build_root(), 'po'))
+config_piper_devel.set('gtk_major_version', gtk_major_version)
+config_piper_devel.set('gtk_minor_version', gtk_minor_version)
+config_piper_devel.set('devel', '
+sys.path.insert(1, \'@0@\')
+print(\'Running from source tree, using local files\')
+'.format(meson.source_root()))
 
 configure_file(input: 'piper.in',
 	       output: 'piper.devel',
