CircleCI: install libratbag as well
Needed for #213

--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ jobs:
       # now install and checks the resulting file (just in case)
       - run:
           command: |
-            dnf install -y meson gettext python3-devel pygobject3-devel
+            dnf install -y meson gettext python3-devel pygobject3-devel libratbag-ratbagd
       - run:
           command: |
             meson build
