--- a/data/org.freedesktop.Piper.appdata.xml.in
+++ b/data/org.freedesktop.Piper.appdata.xml.in
@@ -14,7 +14,7 @@
       button behaviors.
     </p>
     <p>
-      Piper requires libratbag's ratbagd, the daemon to actually communicate with the
+      Piper requires libratbag’s ratbagd, the daemon to actually communicate with the
       mice. Piper is merely a front end to ratbagd, ratbagd must be
       installed and running when Piper is launched.
     </p>
