data: update the contributor list
From git shortlog, with the emails removed because I'm pretty sure just
because you sent a patch once to piper doesn't mean everyone needs to know
your email address.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/data/ui/AboutDialog.ui.in
+++ b/data/ui/AboutDialog.ui.in
@@ -15,8 +15,21 @@
     Jente Hidskes &lt;hjdskes@gmail.com&gt;
     Peter Hutterer &lt;peter.hutterer@who-t.net&gt;
 
+    <!--  Contributor list: git log | git shortlog \-\-summary | cut -f2 -->
 Contributors:
-	Dan Callaghan &lt;djc@djc.id.au&gt;
+        AsavarTzeth
+        Benjamin Tissoires
+        Dan Callaghan
+        FFY00
+        Ikey Doherty
+        Jente Hidskes
+        Julian Richen
+        Peter Hutterer
+        Piotr Drąg
+        Rasmus Thomsen
+        Thomas Hindoe Paaboel Andersen
+        gogogogi
+        muzena
     </property>
     <property name="artists">Peter Hutterer &lt;peter.hutterer@who-t.net&gt;</property>
     <property name="translator_credits" translatable="yes">translator-credits</property>
