--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,8 @@ project('piper',
 	meson_version: '>= 0.40.0')
 # The tag date of the project_version(), update when the version bumps.
 version_date='2018-09-07'
+# Note: Update the Contributor list in data/ui/AboutDialog.ui.in when the
+# version bumps
 
 # Dependencies
 dependency('python3', required: true)
