data: add Logitech G100s

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -2,6 +2,10 @@
 DeviceMatch=usb:1ea7:4011
 Svg=etekcity.svg
 
+[Logitech G100s]
+DeviceMatch=usb:046d:c247
+Svg=logitech-g-pro.svg
+
 [Logitech Gaming Mouse G102/G103]
 DeviceMatch=usb:046d:c084
 Svg=logitech-g102-g203.svg
