data: properly identify the Lightspeed connector

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -70,7 +70,7 @@ Svg=logitech-g703.svg
 DeviceMatch=usb:046d:c081
 Svg=logitech-g900.svg
 
-[Logitech G900, G903, G603, G403]
+[Logitech Device (via Lightspeed connector)]
 DeviceMatch=usb:046d:c539
 Svg=logitech-g900.svg
 
