data: cleanup svg-lookup.ini

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -2,7 +2,7 @@
 DeviceMatch=usb:1ea7:4011
 Svg=etekcity.svg
 
-[Logitech Gaming Mouse G102/G103]
+[Logitech G102/G103]
 DeviceMatch=usb:046d:c084
 Svg=logitech-g102-g203.svg
 
@@ -10,15 +10,15 @@ Svg=logitech-g102-g203.svg
 DeviceMatch=usb:046d:c246
 Svg=logitech-g300.svg
 
-[Logitech Gaming Mouse G302]
+[Logitech G302]
 DeviceMatch=usb:046d:c07f
 Svg=logitech-g303.svg
 
-[Logitech Gaming Mouse G303]
+[Logitech G303]
 DeviceMatch=usb:046d:c080
 Svg=logitech-g303.svg
 
-[Logitech G402 Gaming Mouse]
+[Logitech G402]
 DeviceMatch=usb:046d:c07e
 Svg=logitech-g402.svg
 
@@ -82,11 +82,11 @@ Svg=logitech-g900.svg
 DeviceMatch=usb:046d:c048
 Svg=logitech-g9.svg
 
-[Logitech G PowerPlay mouse pad.]
+[Logitech G PowerPlay (Mouse Pad)]
 DeviceMatch=usb:046d:c53a
 Svg=logitech-g900.svg
 
-[Logitech Gaming Mouse G Pro]
+[Logitech G Pro]
 DeviceMatch=usb:046d:c085
 Svg=logitech-g-pro.svg
 
