SVG file for Roccat Kone Pure.

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -114,6 +114,10 @@ Svg=logitech-mx-master.svg
 DeviceMatch=usb:1e7d:2e22
 Svg=roccat-kone-xtd.svg
 
+[Roccat Kone Pure]
+DeviceMatch=usb:1e7d:2dc2
+Svg=roccat-kone-pure.svg
+
 [SteelSeries Kinzu V2]
 DeviceMatch=usb:1038:1378
 Svg=steelseries-kinzu-v2.svg
