updating deviceMatch for Logitech G Pro
based on 
https://github.com/libratbag/libratbag/pull/686
https://github.com/libratbag/libratbag/issues/684

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -87,7 +87,7 @@ DeviceMatch=usb:046d:c53a
 Svg=logitech-g900.svg
 
 [Logitech G Pro]
-DeviceMatch=usb:046d:c085
+DeviceMatch=usb:046d:c085;usb:046d:c08c
 Svg=logitech-g-pro.svg
 
 [Logitech G Pro Wireless]
