--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -99,7 +99,7 @@ DeviceMatch=usb:046d:404a;bluetooth:046d:b013
 Svg=logitech-mx-anywhere2.svg
 
 [Logitech MX Anywhere 2S]
-DeviceMatch=usb:046d:406a
+DeviceMatch=bluetooth:046d:b01a;usb:046d:406a
 Svg=logitech-mx-anywhere2.svg
 
 [Logitech MX Master 2S]
