Replace G Pro Wireless Receiver PID with Device WPID

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -91,7 +91,7 @@ DeviceMatch=usb:046d:c085;usb:046d:c08c
 Svg=logitech-g-pro.svg
 
 [Logitech G Pro Wireless]
-DeviceMatch=usb:046d:c539;usb:046d:c088
+DeviceMatch=usb:046d:4079;usb:046d:c088
 Svg=logitech-g-pro-wireless.svg
 
 [Logitech MX Anywhere 2]
