Added G403 device WPID

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -23,7 +23,7 @@ DeviceMatch=usb:046d:c07e
 Svg=logitech-g402.svg
 
 [Logitech G403]
-DeviceMatch=usb:046d:c082;usb:046d:c083
+DeviceMatch=usb:046d:c082;usb:046d:c083;usb:046d:405d
 Svg=logitech-g403.svg
 
 [Logitech G500]
