Added G900 device WPID

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -67,7 +67,7 @@ DeviceMatch=usb:046d:c087
 Svg=logitech-g703.svg
 
 [Logitech G900]
-DeviceMatch=usb:046d:c081
+DeviceMatch=usb:046d:c081;usb:046d:4053
 Svg=logitech-g900.svg
 
 [Logitech G900, G903, G603, G403]
