data: adapt to Linux 5.2 for Logitech devices
Signed-off-by: Filipe Laíns <lains@archlinux.org>

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -23,7 +23,11 @@ DeviceMatch=usb:046d:c07e
 Svg=logitech-g402.svg
 
 [Logitech G403]
-DeviceMatch=usb:046d:c082;usb:046d:c083
+DeviceMatch=usb:046d:c083
+Svg=logitech-g403.svg
+
+[Logitech G403]
+DeviceMatch=usb:046d:c082;usb:046d:405d
 Svg=logitech-g403.svg
 
 [Logitech G500]
@@ -34,7 +38,7 @@ Svg=logitech-g500.svg
 DeviceMatch=usb:046d:c24e
 Svg=logitech-g500s.svg
 
-[Logitech G502 HERO]
+[Logitech G502 Hero]
 DeviceMatch=usb:046d:c08b
 Svg=logitech-g502.svg
 
@@ -51,7 +55,7 @@ DeviceMatch=usb:046d:c24a
 Svg=logitech-g600.svg
 
 [Logitech G603]
-DeviceMatch=bluetooth:046d:b01c
+DeviceMatch=bluetooth:046d:b01c;usb:046d:406c
 Svg=logitech-g603.svg
 
 [Logitech G700]
@@ -63,35 +67,35 @@ DeviceMatch=usb:046d:c531
 Svg=logitech-g700.svg
 
 [Logitech G703]
-DeviceMatch=usb:046d:c087
+DeviceMatch=usb:046d:c087;usb:046d:4070
+Svg=logitech-g703.svg
+
+[Logitech G703 Hero]
+DeviceMatch=usb:046d:c090;usb:046d:4086
 Svg=logitech-g703.svg
 
 [Logitech G900]
-DeviceMatch=usb:046d:c081
-Svg=logitech-g900.svg
-
-[Logitech G900, G903, G603, G403]
-DeviceMatch=usb:046d:c539
+DeviceMatch=usb:046d:c081;usb:046d:4053
 Svg=logitech-g900.svg
 
 [Logitech G903]
-DeviceMatch=usb:046d:c086
+DeviceMatch=usb:046d:c086;usb:046d:4067
+Svg=logitech-g900.svg
+
+[Logitech G903 Hero]
+DeviceMatch=usb:046d:c091;usb:046d:4087
 Svg=logitech-g900.svg
 
 [Logitech G9]
 DeviceMatch=usb:046d:c048
 Svg=logitech-g9.svg
 
-[Logitech G PowerPlay (Mouse Pad)]
-DeviceMatch=usb:046d:c53a
-Svg=logitech-g900.svg
-
 [Logitech G Pro]
 DeviceMatch=usb:046d:c085;usb:046d:c08c
 Svg=logitech-g-pro.svg
 
 [Logitech G Pro Wireless]
-DeviceMatch=usb:046d:c539;usb:046d:c088
+DeviceMatch=usb:046d:c088;usb:046d:4079
 Svg=logitech-g-pro-wireless.svg
 
 [Logitech MX Anywhere 2]
