Add G502 Hero Wireless svg lookup entry

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -38,6 +38,10 @@ Svg=logitech-g500.svg
 DeviceMatch=usb:046d:c24e
 Svg=logitech-g500s.svg
 
+[Logitech G502 Hero Wireless]
+DeviceMatch=usb:046d:407f
+Svg=logitech-g502.svg
+
 [Logitech G502 Hero]
 DeviceMatch=usb:046d:c08b
 Svg=logitech-g502.svg
