--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -115,7 +115,7 @@ DeviceMatch=bluetooth:046d:b019;usb:046d:4069
 Svg=logitech-mx-master-2s.svg
 
 [Logitech MX Master]
-DeviceMatch=usb:046d:4041;bluetooth:046d:b012;usb:046d:4060;bluetooth:046d:b017
+DeviceMatch=usb:046d:4041;bluetooth:046d:b012;usb:046d:4060;bluetooth:046d:b017;usb:046d:4071
 Svg=logitech-mx-master.svg
 
 [Roccat Kone XTD]
