meson: run flake8 as part of ninja test
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -119,3 +119,11 @@ configure_file(input: 'piper.in',
 	       configuration: config_piper_devel)
 
 meson.add_install_script('meson_install.sh')
+
+flake8 = find_program('flake8-3', required: false)
+if flake8.found()
+   test('flake8', flake8,
+        args: ['--ignore=E501,W504',
+               join_paths(meson.source_root(), 'piper'),
+               join_paths(meson.source_root(), 'piper.in')])
+endif
