data: use the G9 svg for the G9x
Fixes #401

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -94,6 +94,10 @@ Svg=logitech-g900.svg
 DeviceMatch=usb:046d:c048
 Svg=logitech-g9.svg
 
+[Logitech G9x]
+DeviceMatch=usb:046d:c066
+Svg=logitech-g9.svg
+
 [Logitech G Pro]
 DeviceMatch=usb:046d:c085;usb:046d:c08c
 Svg=logitech-g-pro.svg
