--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -62,6 +62,10 @@ Svg=logitech-g600.svg
 DeviceMatch=bluetooth:046d:b01c;usb:046d:406c
 Svg=logitech-g603.svg
 
+[Logitech G604]
+DeviceMatch=usb:046d:4085;bluetooth:046d:b024
+Svg=logitech-g604.svg
+
 [Logitech G700]
 DeviceMatch=usb:046d:c06b;usb:046d:c07c
 Svg=logitech-g700.svg
