--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -118,6 +118,10 @@ Svg=logitech-mx-anywhere2.svg
 DeviceMatch=bluetooth:046d:b01a;usb:046d:406a
 Svg=logitech-mx-anywhere2.svg
 
+[Logitech MX Ergo]
+DeviceMatch=bluetooth:046d:b01d;usb:046d:406f
+Svg=logitech-mx-ergo.svg
+
 [Logitech MX Master 2S]
 DeviceMatch=bluetooth:046d:b019;usb:046d:4069
 Svg=logitech-mx-master-2s.svg
