G602 now uses the G604 svg

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -58,6 +58,10 @@ Svg=logitech-g502.svg
 DeviceMatch=usb:046d:c24a
 Svg=logitech-g600.svg
 
+[Logitech G602]
+DeviceMatch=usb:046d:402c
+Svg=logitech-g602.svg
+
 [Logitech G603]
 DeviceMatch=bluetooth:046d:b01c;usb:046d:406c
 Svg=logitech-g603.svg
