Add SVG for steelseries-kinzu-v3

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -142,6 +142,10 @@ Svg=roccat-kone-xtd.svg
 DeviceMatch=usb:1038:1378
 Svg=steelseries-kinzu-v2.svg
 
+[SteelSeries Kinzu V3]
+DeviceMatch=usb:1038:1388
+Svg=steelseries-kinzu-v3.svg
+
 [SteelSeries Rival 310]
 DeviceMatch=usb:1038:1720
 Svg=steelseries-rival310.svg
