Add SVG for Roccat Kone Pure
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -134,6 +134,10 @@ Svg=logitech-mx-master-2s.svg
 DeviceMatch=usb:046d:4041;bluetooth:046d:b012;usb:046d:4060;bluetooth:046d:b017;usb:046d:4071
 Svg=logitech-mx-master.svg
 
+[Roccat Kone Pure]
+DeviceMatch=usb:1e7d:2dc2
+Svg=roccat-kone-pure.svg
+
 [Roccat Kone XTD]
 DeviceMatch=usb:1e7d:2e22
 Svg=roccat-kone-xtd.svg
