--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -18,6 +18,10 @@ Svg=logitech-g303.svg
 DeviceMatch=usb:046d:c080
 Svg=logitech-g303.svg
 
+[Logitech G305]
+DeviceMatch=usb:046d:4074
+Svg=logitech-g-pro.svg
+
 [Logitech G402]
 DeviceMatch=usb:046d:c07e
 Svg=logitech-g402.svg
