--- a/data/ui/AboutDialog.ui.in
+++ b/data/ui/AboutDialog.ui.in
@@ -7,9 +7,9 @@
     <property name="modal">True</property>
     <property name="type_hint">normal</property>
     <property name="program_name">Piper</property>
-    <property name="version">@version@</property>
-    <property name="website">@url@</property>
-    <property name="website_label" translatable="yes">Visit Piper’s website</property>
+    <property name="version" translatable="yes">Version: @version@</property>
+    <property name="website">https://github.com/libratbag/piper</property>
+    <property name="website_label" translatable="yes">Visit Piper on GitHub</property>
     <property name="translator_credits" translatable="yes">translator-credits</property>
     <property name="logo_icon_name">org.freedesktop.Piper</property>
     <property name="license_type">gpl-2-0</property>
