--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -43,7 +43,7 @@ DeviceMatch=usb:046d:c24e
 Svg=logitech-g500s.svg
 
 [Logitech G502 Hero Wireless]
-DeviceMatch=usb:046d:407f
+DeviceMatch=usb:046d:407f;usb:046d:c08d
 Svg=logitech-g502.svg
 
 [Logitech G502 Hero]
