Added SVG for Logitech G815

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -90,6 +90,10 @@ Svg=logitech-g703.svg
 DeviceMatch=usb:046d:c090;usb:046d:4086
 Svg=logitech-g703.svg
 
+[Logitech G815]
+DeviceMatch=usb:046d:c33f
+Svg=logitech-g815.svg
+
 [Logitech G900]
 DeviceMatch=usb:046d:c081;usb:046d:4053
 Svg=logitech-g900.svg
