data: add IDs for MX Master 3

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -130,6 +130,10 @@ Svg=logitech-mx-anywhere2.svg
 DeviceMatch=bluetooth:046d:b01d;usb:046d:406f
 Svg=logitech-mx-ergo.svg
 
+[Logitech MX Master 3]
+DeviceMatch=bluetooth:046d:b023;usb:046d:4082
+Svg=logitech-mx-master-3.svg
+
 [Logitech MX Master 2S]
 DeviceMatch=bluetooth:046d:b019;usb:046d:4069
 Svg=logitech-mx-master-2s.svg
