--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -118,6 +118,10 @@ Svg=logitech-g-pro.svg
 DeviceMatch=usb:046d:c088;usb:046d:4079
 Svg=logitech-g-pro-wireless.svg
 
+[Logitech MX518]
+DeviceMatch=usb:046d:c08e
+Svg=logitech-mx518.svg
+
 [Logitech MX Anywhere 2]
 DeviceMatch=usb:046d:404a;bluetooth:046d:b013;bluetooth:046d:b018
 Svg=logitech-mx-anywhere2.svg
