data: add SVG for Logitech M720 Triathlon

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -122,6 +122,10 @@ Svg=logitech-g-pro.svg
 DeviceMatch=usb:046d:c088;usb:046d:4079
 Svg=logitech-g-pro-wireless.svg
 
+[Logitech M720]
+DeviceMatch=usb:046d:405e
+Svg=logitech-m720.svg
+
 [Logitech MX518]
 DeviceMatch=usb:046d:c08e
 Svg=logitech-mx518.svg
