--- a/data/meson.build
+++ b/data/meson.build
@@ -56,6 +56,7 @@ svgs = [
 	'svgs/logitech-g900.svg',
 	'svgs/logitech-g-pro.svg',
 	'svgs/logitech-g-pro-wireless.svg',
+	'svgs/logitech-m720.svg',
 	'svgs/logitech-mx518.svg',
 	'svgs/logitech-mx-anywhere2.svg',
 	'svgs/logitech-mx-anywhere2s.svg',
