--- a/data/meson.build
+++ b/data/meson.build
@@ -9,8 +9,8 @@ conf.set('version', meson.project_version())
 conf.set('version_date', version_date)
 
 about_dialog = configure_file(input: 'ui/AboutDialog.ui.in',
-			      output: 'AboutDialog.ui',
-			      configuration: conf)
+                              output: 'AboutDialog.ui',
+                              configuration: conf)
 
 install_data('org.freedesktop.Piper.svg', install_dir: icondir)
 
@@ -36,43 +36,43 @@ i18n.merge_file(input: appdata,
 # SVG files
 
 svgs = [
-	'svgs/fallback.svg',
-	'svgs/logitech-g9.svg',
-	'svgs/logitech-g102-g203.svg',
-	'svgs/logitech-g300.svg',
-	'svgs/logitech-g303.svg',
-	'svgs/logitech-g402.svg',
-	'svgs/logitech-g403.svg',
-	'svgs/logitech-g500.svg',
-	'svgs/logitech-g500s.svg',
-	'svgs/logitech-g502.svg',
-	'svgs/logitech-g600.svg',
-	'svgs/logitech-g602.svg',
-	'svgs/logitech-g603.svg',
-	'svgs/logitech-g604.svg',
-	'svgs/logitech-g700.svg',
-	'svgs/logitech-g703.svg',
-	'svgs/logitech-g815.svg',
-	'svgs/logitech-g900.svg',
-	'svgs/logitech-g-pro.svg',
-	'svgs/logitech-g-pro-wireless.svg',
-	'svgs/logitech-m720.svg',
-	'svgs/logitech-mx518.svg',
-	'svgs/logitech-mx-anywhere2.svg',
-	'svgs/logitech-mx-anywhere2s.svg',
-	'svgs/logitech-mx-ergo.svg',
-	'svgs/logitech-mx-master.svg',
-	'svgs/logitech-mx-master-2s.svg',
-	'svgs/logitech-mx-master-3.svg',
-	'svgs/roccat-kone-pure.svg',
-	'svgs/roccat-kone-xtd.svg',
-	'svgs/steelseries-kinzu-v2.svg',
-	'svgs/steelseries-kinzu-v3.svg',
-	'svgs/steelseries-rival.svg',
-	'svgs/steelseries-rival310.svg',
-	'svgs/steelseries-rival600.svg',
-	'svgs/steelseries-sensei310.svg',
-	'svgs/steelseries-senseiraw.svg',
+    'svgs/fallback.svg',
+    'svgs/logitech-g9.svg',
+    'svgs/logitech-g102-g203.svg',
+    'svgs/logitech-g300.svg',
+    'svgs/logitech-g303.svg',
+    'svgs/logitech-g402.svg',
+    'svgs/logitech-g403.svg',
+    'svgs/logitech-g500.svg',
+    'svgs/logitech-g500s.svg',
+    'svgs/logitech-g502.svg',
+    'svgs/logitech-g600.svg',
+    'svgs/logitech-g602.svg',
+    'svgs/logitech-g603.svg',
+    'svgs/logitech-g604.svg',
+    'svgs/logitech-g700.svg',
+    'svgs/logitech-g703.svg',
+    'svgs/logitech-g815.svg',
+    'svgs/logitech-g900.svg',
+    'svgs/logitech-g-pro.svg',
+    'svgs/logitech-g-pro-wireless.svg',
+    'svgs/logitech-m720.svg',
+    'svgs/logitech-mx518.svg',
+    'svgs/logitech-mx-anywhere2.svg',
+    'svgs/logitech-mx-anywhere2s.svg',
+    'svgs/logitech-mx-ergo.svg',
+    'svgs/logitech-mx-master.svg',
+    'svgs/logitech-mx-master-2s.svg',
+    'svgs/logitech-mx-master-3.svg',
+    'svgs/roccat-kone-pure.svg',
+    'svgs/roccat-kone-xtd.svg',
+    'svgs/steelseries-kinzu-v2.svg',
+    'svgs/steelseries-kinzu-v3.svg',
+    'svgs/steelseries-rival.svg',
+    'svgs/steelseries-rival310.svg',
+    'svgs/steelseries-rival600.svg',
+    'svgs/steelseries-sensei310.svg',
+    'svgs/steelseries-senseiraw.svg',
 ]
 
 svg_mapping = files('svgs/svg-lookup.ini')
@@ -84,9 +84,8 @@ test('check-svg', test_svg_files,
 
 test('svg-lookup-check',
      find_program('svg-lookup-ini-test.py'),
-     args: [
-         svg_mapping,
-         join_paths(meson.source_root(), 'data/svgs/')
+     args: [svg_mapping,
+            join_paths(meson.source_root(), 'data/svgs/')
      ],
 
 )
@@ -106,13 +105,11 @@ gresource = configure_file(input: 'piper.gresource.xml.in',
                            command: ['generate-piper-gresource.xml.py',
                                      join_paths(meson.current_source_dir(), 'piper.gresource.xml.in'),
                                      join_paths(meson.current_build_dir(), 'piper.gresource.xml'),
-                                     svgs
-                                     ]
-                           )
+                                     svgs])
 
 gnome.compile_resources('piper', gresource,
-			source_dir: '.',
-			dependencies: [about_dialog],
-			gresource_bundle: true,
-			install: true,
-			install_dir: pkgdatadir)
+                        source_dir: '.',
+                        dependencies: [about_dialog],
+                        gresource_bundle: true,
+                        install: true,
+                        install_dir: pkgdatadir)
