--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -30,6 +30,10 @@ Svg=logitech-g402.svg
 DeviceMatch=usb:046d:c083
 Svg=logitech-g403.svg
 
+[Logitech G403 Hero]
+DeviceMatch=usb:046d:c08f
+Svg=logitech-g403.svg
+
 [Logitech G403 Wireless]
 DeviceMatch=usb:046d:c082;usb:046d:405d
 Svg=logitech-g403.svg
