--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -115,7 +115,7 @@ DeviceMatch=usb:046d:c048
 Svg=logitech-g9.svg
 
 [Logitech G9x]
-DeviceMatch=usb:046d:c066
+DeviceMatch=usb:046d:c066;usb:046d:c249
 Svg=logitech-g9.svg
 
 [Logitech G Pro]
