--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -159,7 +159,7 @@ DeviceMatch=usb:046d:4041;bluetooth:046d:b012;usb:046d:4060;bluetooth:046d:b017;
 Svg=logitech-mx-master.svg
 
 [Roccat Kone Pure]
-DeviceMatch=usb:1e7d:2dc2
+DeviceMatch=usb:1e7d:2dc2;usb:1e7d:2dbe
 Svg=roccat-kone-pure.svg
 
 [Roccat Kone XTD]
