data: add additional USB-ID for Roccat Kone Pure
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -175,7 +175,7 @@ DeviceMatch=bluetooth:046d:b020;usb:046d:407b
 Svg=logitech-mx-vertical.svg
 
 [Roccat Kone Pure]
-DeviceMatch=usb:1e7d:2dc2
+DeviceMatch=usb:1e7d:2dc2;usb:1e7d:2dbe
 Svg=roccat-kone-pure.svg
 
 [Roccat Kone XTD]
