meson: make flake8 a requirement for the tests
Signed-off-by: Stephan Lachnit <stephanlachnit@protonmail.com>

--- a/meson.build
+++ b/meson.build
@@ -123,7 +123,7 @@ configure_file(input: 'piper.in',
 meson.add_install_script('meson_install.sh')
 
 if enable_tests
-    flake8 = find_program('flake8', required: false)
+    flake8 = find_program('flake8')
     if flake8.found()
         test('flake8', flake8,
              args: ['--ignore=E501,W504',
