Added another device ID for G203

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -3,7 +3,7 @@ DeviceMatch=usb:1ea7:4011
 Svg=fallback.svg
 
 [Logitech G102/G103]
-DeviceMatch=usb:046d:c084
+DeviceMatch=usb:046d:c084;usb:046d:c092
 Svg=logitech-g102-g203.svg
 
 [Logitech G300]
