Add sample svg for mx vertical

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -150,6 +150,10 @@ Svg=logitech-mx-ergo.svg
 DeviceMatch=bluetooth:046d:b023;usb:046d:4082
 Svg=logitech-mx-master-3.svg
 
+[Logitech MX Vertical]
+DeviceMatch=bluetooth:046d:b020;usb:046d:407b
+Svg=logitech-mx-vertical.svg
+
 [Logitech MX Master 2S]
 DeviceMatch=bluetooth:046d:b019;usb:046d:4069
 Svg=logitech-mx-master-2s.svg
