data: add SVG for the Logitech G915
The SVG is reused from the Logitech G815, as it is the same device, just wireless.

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -98,6 +98,10 @@ Svg=logitech-g703.svg
 DeviceMatch=usb:046d:c33f
 Svg=logitech-g815.svg
 
+[Logitech G915]
+DeviceMatch=usb:046d:c33e;usb:046d:c541
+Svg=logitech-g915.svg
+
 [Logitech G900]
 DeviceMatch=usb:046d:c081;usb:046d:4053
 Svg=logitech-g900.svg
