Add Logitech G Pro X Superlight

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -130,6 +130,10 @@ Svg=logitech-g-pro.svg
 DeviceMatch=usb:046d:c088;usb:046d:4079
 Svg=logitech-g-pro-wireless.svg
 
+[Logitech G Pro X Superlight]
+DeviceMatch=usb:046d:c547;usb:046d:c094
+Svg=logitech-g-pro-x-superlight.svg
+
 [Logitech M720]
 DeviceMatch=usb:046d:405e;bluetooth:046d:b015
 Svg=logitech-m720.svg
