--- a/data/meson.build
+++ b/data/meson.build
@@ -70,6 +70,7 @@ svgs = [
     'svgs/logitech-g900.svg',
     'svgs/logitech-g-pro.svg',
     'svgs/logitech-g-pro-wireless.svg',
+    'svgs/logitech-g-pro-x-superlight.svg',
     'svgs/logitech-m720.svg',
     'svgs/logitech-mx518.svg',
     'svgs/logitech-mx-anywhere2.svg',
