--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -138,6 +138,10 @@ Svg=logitech-g-pro-wireless.svg
 DeviceMatch=usb:046d:4093;usb:046d:c094
 Svg=logitech-g-pro-x-wireless-superlight.svg
 
+[Logitech M500s]
+DeviceMatch=usb:046d:c093
+Svg=logitech-m500s.svg
+
 [Logitech M720]
 DeviceMatch=usb:046d:405e;bluetooth:046d:b015
 Svg=logitech-m720.svg
