Add SteelSeries Sensei Ten
Based on the svg from the Sensei RAW as they look virtually identical.
The Ten just has one more LED on the scrollwheel.

--- a/data/meson.build
+++ b/data/meson.build
@@ -89,6 +89,7 @@ svgs = [
     'svgs/steelseries-rival600.svg',
     'svgs/steelseries-sensei310.svg',
     'svgs/steelseries-senseiraw.svg',
+    'svgs/steelseries-senseiten.svg',
 ]
 
 svg_mapping = files('svgs/svg-lookup.ini')
