--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -205,3 +205,7 @@ Svg=steelseries-sensei310.svg
 [SteelSeries Sensei Raw]
 DeviceMatch=usb:1038:1369
 Svg=steelseries-senseiraw.svg
+
+[SteelSeries Sensei Ten]
+DeviceMatch=usb:1038:1832
+Svg=steelseries-senseiten.svg
