data: add mx vertical support
PR #606

--- a/data/meson.build
+++ b/data/meson.build
@@ -80,6 +80,7 @@ svgs = [
     'svgs/logitech-mx-master.svg',
     'svgs/logitech-mx-master-2s.svg',
     'svgs/logitech-mx-master-3.svg',
+    'svgs/logitech-mx-vertical.svg',
     'svgs/roccat-kone-pure.svg',
     'svgs/roccat-kone-xtd.svg',
     'svgs/steelseries-kinzu-v2.svg',
