--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -170,6 +170,10 @@ Svg=logitech-mx-master-2s.svg
 DeviceMatch=usb:046d:4041;bluetooth:046d:b012;usb:046d:4060;bluetooth:046d:b017;usb:046d:4071
 Svg=logitech-mx-master.svg
 
+[Logitech MX Vertical]
+DeviceMatch=bluetooth:046d:b020;usb:046d:407b
+Svg=logitech-mx-vertical.svg
+
 [Roccat Kone Pure]
 DeviceMatch=usb:1e7d:2dc2
 Svg=roccat-kone-pure.svg
