Marsgaming add svg of marsgaming mm4

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -178,6 +178,10 @@ Svg=logitech-mx-master.svg
 DeviceMatch=bluetooth:046d:b020;usb:046d:407b
 Svg=logitech-mx-vertical.svg
 
+[Mars Gaming MM4]
+DeviceMatch=usb:04d9:fa58
+Svg=marsgaming-mm4.svg
+
 [Roccat Kone Pure]
 DeviceMatch=usb:1e7d:2dc2;usb:1e7d:2dbe
 Svg=roccat-kone-pure.svg
