--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -150,6 +150,10 @@ Svg=logitech-m720.svg
 DeviceMatch=usb:046d:c08e
 Svg=logitech-mx518.svg
 
+[Logitech MX Anywhere 3]
+DeviceMatch=usb:046d:c52b;bluetooth:046d:b025
+Svg=logitech-mx-anywhere3.svg
+
 [Logitech MX Anywhere 2]
 DeviceMatch=usb:046d:404a;usb:046d:4072;usb:046d:4063;bluetooth:046d:b013;bluetooth:046d:b018;bluetooth:046d:b01f
 Svg=logitech-mx-anywhere2.svg
